--- a/conf/config.level8.neon
+++ b/conf/config.level8.neon
@@ -3,3 +3,7 @@ includes:
 
 parameters:
 	checkNullables: true
+
+autowiredAttributeServices:
+	# registers rules with #[RegisteredRule] attribute
+	level: 8
