--- a/conf/config.level1.neon
+++ b/conf/config.level1.neon
@@ -14,6 +14,10 @@ rules:
 	- PHPStan\Rules\Variables\IssetRule
 	- PHPStan\Rules\Variables\NullCoalesceRule
 
+autowiredAttributeServices:
+	# registers rules with #[RegisteredRule] attribute
+	level: 1
+
 services:
 	-
 		class: PHPStan\Rules\Constants\ConstantRule
