--- a/conf/config.level6.neon
+++ b/conf/config.level6.neon
@@ -13,3 +13,7 @@ rules:
 	- PHPStan\Rules\Methods\MissingMethodReturnTypehintRule
 	- PHPStan\Rules\Methods\MissingMethodSelfOutTypeRule
 	- PHPStan\Rules\Properties\MissingPropertyTypehintRule
+
+autowiredAttributeServices:
+	# registers rules with #[RegisteredRule] attribute
+	level: 6
