--- a/conf/config.level9.neon
+++ b/conf/config.level9.neon
@@ -3,3 +3,7 @@ includes:
 
 parameters:
 	checkExplicitMixed: true
+
+autowiredAttributeServices:
+	# registers rules with #[RegisteredRule] attribute
+	level: 9
