--- a/conf/config.level4.neon
+++ b/conf/config.level4.neon
@@ -2,7 +2,7 @@ includes:
 	- config.level3.neon
 
 autowiredAttributeServices:
-	# registers rules with #[RegisteredRule] attribute
+	# registers rules with #[RegisteredRule] and #[RegisteredCollector] attributes
 	level: 4
 
 conditionalTags:
@@ -18,41 +18,6 @@ parameters:
 
 services:
 	-
-		class: PHPStan\Rules\DeadCode\ConstructorWithoutImpurePointsCollector
-		tags:
-			- phpstan.collector
-
-	-
-		class: PHPStan\Rules\DeadCode\PossiblyPureNewCollector
-		tags:
-			- phpstan.collector
-
-	-
-		class: PHPStan\Rules\DeadCode\FunctionWithoutImpurePointsCollector
-		tags:
-			 - phpstan.collector
-
-	-
-		class: PHPStan\Rules\DeadCode\PossiblyPureFuncCallCollector
-		tags:
-			 - phpstan.collector
-
-	-
-		class: PHPStan\Rules\DeadCode\MethodWithoutImpurePointsCollector
-		tags:
-			 - phpstan.collector
-
-	-
-		class: PHPStan\Rules\DeadCode\PossiblyPureMethodCallCollector
-		tags:
-			 - phpstan.collector
-
-	-
-		class: PHPStan\Rules\DeadCode\PossiblyPureStaticCallCollector
-		tags:
-			 - phpstan.collector
-
-	-
 		class: PHPStan\Rules\Exceptions\TooWideFunctionThrowTypeRule
 
 	-
@@ -60,13 +25,3 @@ services:
 
 	-
 		class: PHPStan\Rules\Exceptions\TooWidePropertyHookThrowTypeRule
-
-	-
-		class: PHPStan\Rules\Traits\TraitDeclarationCollector
-		tags:
-			- phpstan.collector
-
-	-
-		class: PHPStan\Rules\Traits\TraitUseCollector
-		tags:
-			- phpstan.collector
