--- a/conf/services.neon
+++ b/conf/services.neon
@@ -167,6 +167,108 @@ services:
 			reportMaybes: %reportMaybesInMethodSignatures%
 			reportStatic: %reportStaticMethodSignatures%
 
+	fileExcluderAnalyse:
+		class: PHPStan\File\FileExcluder
+		factory: @PHPStan\File\FileExcluderFactory::createAnalyseFileExcluder()
+		autowired: false
+
+	fileExcluderScan:
+		class: PHPStan\File\FileExcluder
+		factory: @PHPStan\File\FileExcluderFactory::createScanFileExcluder()
+		autowired: false
+
+	fileFinderAnalyse:
+		class: PHPStan\File\FileFinder
+		arguments:
+			fileExcluder: @fileExcluderAnalyse
+			fileExtensions: %fileExtensions%
+		autowired: false
+
+	fileFinderScan:
+		class: PHPStan\File\FileFinder
+		arguments:
+			fileExcluder: @fileExcluderScan
+			fileExtensions: %fileExtensions%
+		autowired: false
+
+	stubFileTypeMapper:
+		class: PHPStan\Type\FileTypeMapper
+		arguments:
+			phpParser: @stubParser
+		autowired: false
+
+	php8Parser:
+		class: PHPStan\Parser\SimpleParser
+		arguments:
+			parser: @php8PhpParser
+		autowired: false
+
+	currentPhpVersionLexer:
+		class: PhpParser\Lexer
+		factory: @PHPStan\Parser\LexerFactory::create()
+		autowired: false
+
+	currentPhpVersionPhpParser:
+		factory: @currentPhpVersionPhpParserFactory::create()
+		autowired: false
+
+	currentPhpVersionPhpParserFactory:
+		class: PHPStan\Parser\PhpParserFactory
+		arguments:
+			lexer: @currentPhpVersionLexer
+		autowired: false
+
+	currentPhpVersionSimpleDirectParser:
+		class: PHPStan\Parser\SimpleParser
+		arguments:
+			parser: @currentPhpVersionPhpParser
+		autowired: no
+
+	currentPhpVersionSimpleParser:
+		class: PHPStan\Parser\CleaningParser
+		arguments:
+			wrappedParser: @currentPhpVersionSimpleDirectParser
+		autowired: no
+
+	currentPhpVersionRichParser:
+		class: PHPStan\Parser\RichParser
+		arguments:
+			parser: @currentPhpVersionPhpParser
+		autowired: no
+
+	php8Lexer:
+		class: PhpParser\Lexer\Emulative
+		factory: @PHPStan\Parser\LexerFactory::createEmulative()
+		autowired: false
+
+	php8PhpParser:
+		class: PhpParser\Parser\Php8
+		arguments:
+			lexer: @php8Lexer
+		autowired: false
+
+	pathRoutingParser:
+		class: PHPStan\Parser\PathRoutingParser
+		arguments:
+			currentPhpVersionRichParser: @currentPhpVersionRichParser
+			currentPhpVersionSimpleParser: @currentPhpVersionSimpleParser
+			php8Parser: @php8Parser
+			singleReflectionFile: %singleReflectionFile%
+		autowired: false
+
+	phpParserDecorator:
+		class: PHPStan\Parser\PhpParserDecorator
+		arguments:
+			wrappedParser: @defaultAnalysisParser
+		autowired: false
+
+	defaultAnalysisParser:
+		class: PHPStan\Parser\CachedParser
+		arguments:
+			originalParser: @pathRoutingParser
+			cachedNodesByStringCountMax: %cache.nodesByStringCountMax%
+		autowired: false
+
 	betterReflectionSourceLocator:
 		class: PHPStan\BetterReflection\SourceLocator\Type\SourceLocator
 		factory: @PHPStan\Reflection\BetterReflection\BetterReflectionSourceLocatorFactory::create
@@ -176,6 +278,17 @@ services:
 		class: PHPStan\BetterReflection\Reflector\DefaultReflector
 		arguments:
 			sourceLocator: @betterReflectionSourceLocator
+
+	reflectionProvider:
+		factory: @PHPStan\Reflection\ReflectionProvider\ReflectionProviderFactory::create
+		autowired:
+			- PHPStan\Reflection\ReflectionProvider
+
+	cacheStorage:
+		class: PHPStan\Cache\FileCacheStorage
+		arguments:
+			directory: %tmpDir%/cache/PHPStan
+		autowired: no
 
 	errorFormatter.json:
 		class: PHPStan\Command\ErrorFormatter\JsonErrorFormatter
