Explanation in config.neon

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -243,3 +243,8 @@ services:
 
 	-
 		class: PHPStan\Rules\Properties\UninitializedPropertyRule
+
+	# autowired services are now registered with the help of attributes
+	# like #[PHPStan\DependencyInjection\AutowiredService] or #[PHPStan\DependencyInjection\GeneratedFactory]
+
+	# non-autowired services are now registered in services.neon
