--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -748,11 +748,8 @@ parameters:
 			path: src/Rules/RuleLevelHelper.php
 
 		-
-			message: '''
-				#^Call to deprecated method assertFileNotExists\(\) of class PHPUnit\\Framework\\Assert\:
-				https\://github\.com/sebastianbergmann/phpunit/issues/4077$#
-			'''
-			identifier: staticMethod.deprecated
+			message: '#^Call to an undefined static method PHPUnit\\Framework\\TestCase\:\:assertFileNotExists\(\)\.$#'
+			identifier: staticMethod.notFound
 			count: 1
 			path: src/Testing/LevelsTestCase.php
 
@@ -2007,12 +2004,6 @@ parameters:
 		-
 			message: '#^Creating new PHPStan\\Php8StubsMap is not covered by backward compatibility promise\. The class might change in a minor PHPStan version\.$#'
 			identifier: phpstanApi.constructor
-			count: 1
-			path: tests/PHPStan/Reflection/ReflectionProviderGoldenTest.php
-
-		-
-			message: '#^Instanceof references internal interface PHPUnit\\Exception\.$#'
-			identifier: instanceof.internalInterface
 			count: 1
 			path: tests/PHPStan/Reflection/ReflectionProviderGoldenTest.php
 
