--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,8 +32,6 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - "7.4"
-          - "8.0"
           - "8.1"
           - "8.2"
           - "8.3"
@@ -56,15 +54,6 @@ jobs:
 
       - name: "Install dependencies"
         run: "composer install --no-interaction --no-progress"
-
-      - name: "Transform source code"
-        if: matrix.php-version != '8.1' && matrix.php-version != '8.2' && matrix.php-version != '8.3' && matrix.php-version != '8.4'
-        shell: bash
-        run: |
-          composer install --no-interaction --no-progress --working-dir=compiler
-          ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
-          composer dump
-
 
       - name: "Tests"
         run: "make tests"
@@ -158,3 +147,46 @@ jobs:
 
       - name: "Tests"
         run: "${{ matrix.script }}"
+
+  tests-with-old-phpunit:
+    name: "Tests with old PHPUnit"
+    runs-on: ${{ matrix.operating-system }}
+    timeout-minutes: 60
+
+    strategy:
+      fail-fast: false
+      matrix:
+        php-version:
+          - "7.4"
+          - "8.0"
+        operating-system: [ ubuntu-latest, windows-latest ]
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Install PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          coverage: "none"
+          php-version: "${{ matrix.php-version }}"
+          tools: pecl
+          extensions: ds,mbstring
+          ini-file: development
+          ini-values: memory_limit=2G
+
+      - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
+
+      - name: "Downgrade PHPUnit"
+        run: "composer require --dev phpunit/phpunit:^9.6 --update-with-dependencies"
+
+      - name: "Transform source code"
+        shell: bash
+        run: |
+          composer install --no-interaction --no-progress --working-dir=compiler
+          ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
+          composer dump
+
+      - name: "Tests"
+        run: "make tests-coverage"
