--- a/.github/workflows/phar.yml
+++ b/.github/workflows/phar.yml
@@ -41,6 +41,10 @@ jobs:
       - name: "Install dependencies"
         run: "composer install --no-interaction --no-progress"
 
+      # only sebastian/diff ^4 supports PHP 7.4 so we need that in the PHAR
+      - name: "Downgrade PHPUnit"
+        run: "composer require --dev phpunit/phpunit:^9.6 sebastian/diff:^4.0 --update-with-dependencies --ignore-platform-reqs"
+
       - name: "Install compiler dependencies"
         run: "composer install --no-interaction --no-progress --working-dir=compiler"
 
