--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
 		"react/promise": "^3.2",
 		"react/socket": "^1.3",
 		"react/stream": "^1.1",
-		"sebastian/diff": "^4.0 || ^5.0",
+		"sebastian/diff": "^5.0",
 		"symfony/console": "^5.4.3",
 		"symfony/finder": "^5.4.3",
 		"symfony/polyfill-intl-grapheme": "^1.23",
