--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -182,6 +182,10 @@ jobs:
       - name: "Install dependencies"
         run: "composer install --no-interaction --no-progress"
 
+      - name: "Downgrade PHPUnit with Paratest"
+        shell: bash
+        run: "composer require --dev phpunit/phpunit:^9.6 brianium/paratest:^6.5 --update-with-dependencies --ignore-platform-reqs --working-dir=tests"
+
       - name: "Transform source code"
         shell: bash
         run: |
@@ -190,4 +194,4 @@ jobs:
           composer dump
 
       - name: "Tests"
-        run: "make tests-coverage"
+        run: "make tests"
