--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -184,7 +184,7 @@ jobs:
 
       - name: "Downgrade PHPUnit with Paratest"
         shell: bash
-        run: "composer require --dev phpunit/phpunit:^9.6 brianium/paratest:^6.5 --update-with-dependencies --ignore-platform-reqs --working-dir=tests"
+        run: "composer require --dev phpunit/phpunit:^9.6 brianium/paratest:^6.5 symfony/console:^5.4 symfony/process:^5.4 --update-with-dependencies --ignore-platform-reqs --working-dir=tests"
 
       - name: "Transform source code"
         shell: bash
