--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -43,6 +43,11 @@
       "groupName": "compiler"
     },
     {
+        "matchPaths": ["tests/composer.json"],
+        "enabled": true,
+        "groupName": "paratest"
+	},
+    {
       "matchPaths": [".github/**"],
       "enabled": true,
       "groupName": "github-actions"
