--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,7 +40,7 @@ jobs:
           php-version: "${{ matrix.php-version }}"
 
       - name: "Downgrade PHPUnit"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0'
+        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
         run: "composer require --dev phpunit/phpunit:^9.6 sebastian/diff:^4.0 --update-with-dependencies --ignore-platform-reqs"
 
       - name: "Install dependencies"
