--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -49,7 +49,7 @@ jobs:
           extensions: mbstring
 
       - name: "Downgrade PHPUnit"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0'
+        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
         shell: bash
         run: "composer require --dev phpunit/phpunit:^9.6 sebastian/diff:^4.0 --update-with-dependencies --ignore-platform-reqs"
 
