--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 		"MIT"
 	],
 	"require": {
-		"php": "^8.1",
+		"php": "^8.2",
 		"composer-runtime-api": "^2.0",
 		"clue/ndjson-react": "^1.0",
 		"composer/ca-bundle": "^1.2",
@@ -38,7 +38,7 @@
 		"react/promise": "^3.2",
 		"react/socket": "^1.3",
 		"react/stream": "^1.1",
-		"sebastian/diff": "^5.0",
+		"sebastian/diff": "^6.0.2",
 		"symfony/console": "^5.4.3",
 		"symfony/finder": "^5.4.3",
 		"symfony/polyfill-intl-grapheme": "^1.23",
@@ -61,14 +61,14 @@
 		"phpstan/phpstan-nette": "^2.0",
 		"phpstan/phpstan-phpunit": "^2.0.7",
 		"phpstan/phpstan-strict-rules": "^2.0",
-		"phpunit/phpunit": "10.5.31",
+		"phpunit/phpunit": "^11.5.23",
 		"shipmonk/composer-dependency-analyser": "^1.5",
 		"shipmonk/dead-code-detector": "^0.12.0",
 		"shipmonk/name-collision-detector": "^2.0"
 	},
 	"config": {
 		"platform": {
-			"php": "8.1.99"
+			"php": "8.2.99"
 		},
 		"platform-check": false,
 		"sort-packages": true,
