Add stringable access check to ClassConstantRule

--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -1,6 +1,7 @@
 parameters:
 	featureToggles:
 		bleedingEdge: true
+		checkNonStringableDynamicAccess: true
 		checkParameterCastableToNumberFunctions: true
 		skipCheckGenericClasses!: []
 		stricterFunctionMap: true
