--- a/conf/services.neon
+++ b/conf/services.neon
@@ -69,6 +69,11 @@ services:
 		class: PHPStan\Reflection\Annotations\AnnotationsPropertiesClassReflectionExtension
 
 	-
+		class: PHPStan\Reflection\Php\UniversalObjectCratesClassReflectionExtension
+		arguments:
+			classes: %universalObjectCratesClasses%
+
+	-
 		class: PHPStan\Reflection\Mixin\MixinMethodsClassReflectionExtension
 		arguments:
 			mixinExcludeClasses: %mixinExcludeClasses%
