--- a/conf/parametersSchema.neon
+++ b/conf/parametersSchema.neon
@@ -61,6 +61,7 @@ parametersSchema:
 	checkPhpDocMethodSignatures: bool()
 	checkExtraArguments: bool()
 	checkMissingTypehints: bool()
+	checkTooWideParameterOutInProtectedAndPublicMethods: bool()
 	checkTooWideReturnTypesInProtectedAndPublicMethods: bool()
 	checkUninitializedProperties: bool()
 	checkDynamicProperties: bool()
