--- a/conf/config.neon
+++ b/conf/config.neon
@@ -58,6 +58,7 @@ parameters:
 	checkPhpDocMethodSignatures: false
 	checkExtraArguments: false
 	checkMissingTypehints: false
+	checkTooWideParameterOutInProtectedAndPublicMethods: false
 	checkTooWideReturnTypesInProtectedAndPublicMethods: false
 	checkUninitializedProperties: false
 	checkDynamicProperties: false
