--- a/conf/config.neon
+++ b/conf/config.neon
@@ -129,6 +129,7 @@ parameters:
 		- ../stubs/core.stub
 		- ../stubs/typeCheckingFunctions.stub
 		- ../stubs/Countable.stub
+		- ../stubs/file.stub
 	earlyTerminatingMethodCalls: []
 	earlyTerminatingFunctionCalls: []
 	resultCachePath: %tmpDir%/resultCache.php
