--- a/composer.json
+++ b/composer.json
@@ -125,7 +125,8 @@
 				"patches/dom_c.patch"
 			],
 			"nette/di": [
-				"patches/DependencyChecker.patch"
+				"patches/DependencyChecker.patch",
+				"patches/Resolver.patch"
 			],
 			"react/http": [
 				"patches/Sender.patch"
