Bleeding edge - improve comparison against `BcMath\Number`

--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -8,3 +8,4 @@ parameters:
 		reportPreciseLineForUnusedFunctionParameter: true
 		internalTag: true
 		newStaticInAbstractClassStaticMethod: true
+		checkExtensionsForComparisonOperators: true
