--- a/conf/config.neon
+++ b/conf/config.neon
@@ -31,6 +31,7 @@ parameters:
 		reportPreciseLineForUnusedFunctionParameter: false
 		internalTag: false
 		newStaticInAbstractClassStaticMethod: false
+		checkExtensionsForComparisonOperators: false
 	fileExtensions:
 		- php
 	checkAdvancedIsset: false
