Fix FilterFunctionReturnTypeHelper for `FILTER_*` constants redeclared with wrong type

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -282,6 +282,9 @@ jobs:
               cd e2e/ignore-error-extension
               composer install
               ../../bin/phpstan
+          - script: |
+              cd e2e/bug-10483
+              ../../bin/phpstan
 
     steps:
       - name: "Checkout"
