Bleeding edge - report `bool` type as too-wide when only `true` or `false` is assigned

--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -10,3 +10,4 @@ parameters:
 		internalTag: true
 		newStaticInAbstractClassStaticMethod: true
 		checkExtensionsForComparisonOperators: true
+		reportTooWideBool: true
