--- a/conf/config.neon
+++ b/conf/config.neon
@@ -34,6 +34,7 @@ parameters:
 		internalTag: false
 		newStaticInAbstractClassStaticMethod: false
 		checkExtensionsForComparisonOperators: false
+		reportTooWideBool: false
 	fileExtensions:
 		- php
 	checkAdvancedIsset: false
