--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -70,6 +70,13 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
 
+      - name: "Checkout build-cs"
+        uses: actions/checkout@v4
+        with:
+          repository: "phpstan/build-cs"
+          path: "build-cs"
+          ref: "2.x"
+
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
@@ -80,6 +87,10 @@ jobs:
         run: "composer validate"
 
       - name: "Install dependencies"
+        run: "composer install --no-interaction --no-progress"
+
+      - name: "Install build-cs dependencies"
+        working-directory: "build-cs"
         run: "composer install --no-interaction --no-progress"
 
       - name: "Lint"
