Ignored errors: simplify schema, validate in ContainerFactory
Co-authored-by: Ondrej Mirtes <ondrej@mirtes.cz>

--- a/conf/parametersSchema.neon
+++ b/conf/parametersSchema.neon
@@ -112,41 +112,15 @@ parametersSchema:
 		anyOf(
 			string(),
 			structure([
+				?message: string()
 				?messages: listOf(string())
 				?identifier: string()
 				?identifiers: listOf(string())
 				?path: string()
+				?paths: listOf(string())
+				?count: int()
 				?reportUnmatched: bool()
 			]),
-			structure([
-				?message: string()
-				?identifier: string()
-				?identifiers: listOf(string())
-				?path: string()
-				?reportUnmatched: bool()
-			]),
-			structure([
-				?message: string()
-				count: int()
-				path: string()
-				?identifier: string()
-				?identifiers: listOf(string())
-				?reportUnmatched: bool()
-			]),
-			structure([
-				?message: string()
-				paths: listOf(string())
-				?identifier: string()
-				?identifiers: listOf(string())
-				?reportUnmatched: bool()
-			]),
-			structure([
-				?messages: listOf(string())
-				paths: listOf(string())
-				?identifier: string()
-				?identifiers: listOf(string())
-				?reportUnmatched: bool()
-			])
 		)
 	)
 	internalErrorsCountLimit: int()
