bleedingEdge: use `rawMessage` in baseline generators

--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -11,3 +11,4 @@ parameters:
 		newStaticInAbstractClassStaticMethod: true
 		checkExtensionsForComparisonOperators: true
 		reportTooWideBool: true
+		rawMessageInBaseline: true
