--- a/conf/config.neon
+++ b/conf/config.neon
@@ -35,6 +35,7 @@ parameters:
 		newStaticInAbstractClassStaticMethod: false
 		checkExtensionsForComparisonOperators: false
 		reportTooWideBool: false
+		rawMessageInBaseline: false
 	fileExtensions:
 		- php
 	checkAdvancedIsset: false
