Add optional strict check for printf parameter types

--- a/conf/config.level5.neon
+++ b/conf/config.level5.neon
@@ -20,3 +20,5 @@ services:
 		class: PHPStan\Rules\Functions\ParameterCastableToNumberRule
 	-
 		class: PHPStan\Rules\Functions\PrintfParameterTypeRule
+		arguments:
+			checkStrictPrintfPlaceholderTypes: %checkStrictPrintfPlaceholderTypes%
