Switch to ramsey/composer-install action

--- a/.github/workflows/build-issue-bot.yml
+++ b/.github/workflows/build-issue-bot.yml
@@ -42,12 +42,12 @@ jobs:
           coverage: "none"
           php-version: "8.3"
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
-      - name: "Install Issue Bot dependencies"
-        working-directory: "issue-bot"
-        run: "composer install --no-interaction --no-progress"
+      - name: "Install issue-bot dependencies"
+        uses: "ramsey/composer-install@v3"
+        with:
+          working-directory: "issue-bot"
 
       - name: "Tests"
         working-directory: "issue-bot"
