--- a/.github/workflows/apiref.yml
+++ b/.github/workflows/apiref.yml
@@ -37,12 +37,12 @@ jobs:
           coverage: "none"
           php-version: "8.2"
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
       - name: "Install ApiGen dependencies"
-        working-directory: "apigen"
-        run: "composer install --no-interaction --no-progress"
+        uses: "ramsey/composer-install@v3"
+        with:
+          working-directory: "apigen"
 
       - name: "Run ApiGen"
         run: "apigen/vendor/bin/apigen -c apigen/apigen.neon --output docs -- src vendor/nikic/php-parser vendor/ondrejmirtes/better-reflection vendor/phpstan/phpdoc-parser"
