--- a/.github/workflows/backward-compatibility.yml
+++ b/.github/workflows/backward-compatibility.yml
@@ -34,8 +34,7 @@ jobs:
           coverage: "none"
           php-version: "8.2"
 
-      - name: "Install dependencies"
-        run: "composer install --no-dev --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
       - name: "Install BackwardCompatibilityCheck"
         run: |
