--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -298,8 +298,7 @@ jobs:
           extensions: mbstring
           ini-values: memory_limit=256M
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
       - name: "Patch PHPStan"
         run: "patch src/Analyser/Error.php < e2e/PHPStanErrorPatch.patch"
@@ -411,8 +410,7 @@ jobs:
           tools: ${{ matrix.tools }}
           extensions: ${{ matrix.extensions }}
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
       - name: "Install bashunit"
         run: "curl -s https://bashunit.typeddevs.com/install.sh | bash -s e2e/ 0.22.0"
