--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,8 +44,7 @@ jobs:
         if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
         run: "composer require --dev phpunit/phpunit:^9.6 sebastian/diff:^4.0 --update-with-dependencies --ignore-platform-reqs"
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
       - name: "Change to simple-downgrade PHP version"
         if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
@@ -100,12 +99,12 @@ jobs:
       - name: "Validate Composer"
         run: "composer validate"
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
       - name: "Install build-cs dependencies"
-        working-directory: "build-cs"
-        run: "composer install --no-interaction --no-progress"
+        uses: "ramsey/composer-install@v3"
+        with:
+          working-directory: "build-cs"
 
       - name: "Lint"
         run: "make lint"
@@ -129,8 +128,7 @@ jobs:
           coverage: "none"
           php-version: "8.3"
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
       - name: "Composer Dependency Analyser"
         run: "make composer-dependency-analyser"
@@ -151,8 +149,7 @@ jobs:
           coverage: "none"
           php-version: "8.5"
 
-      - name: "Install dependencies"
-        run: "composer install --no-interaction --no-progress"
+      - uses: "ramsey/composer-install@v3"
 
       - name: "Name Collision Detector"
         run: "make name-collision"
