Separate feature toggle for reportNestedTooWideType, turned off temporarily

--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -12,3 +12,4 @@ parameters:
 		checkExtensionsForComparisonOperators: true
 		reportTooWideBool: true
 		rawMessageInBaseline: true
+		reportNestedTooWideType: false
