--- a/issue-bot/composer.json
+++ b/issue-bot/composer.json
@@ -19,6 +19,9 @@
 		}
 	},
 	"config": {
+		"platform": {
+			"php": "8.3.99"
+		},
 		"sort-packages": true,
 		"allow-plugins": {
 			"php-http/discovery": true
