Add `stream_socket_{client,server}` stubs for `@param-out`

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -136,6 +136,8 @@ parameters:
 		- ../stubs/typeCheckingFunctions.stub
 		- ../stubs/Countable.stub
 		- ../stubs/file.stub
+		- ../stubs/stream_socket_client.stub
+		- ../stubs/stream_socket_server.stub
 	earlyTerminatingMethodCalls: []
 	earlyTerminatingFunctionCalls: []
 	resultCachePath: %tmpDir%/resultCache.php
