Bleeding edge - AssignToByRefExprFromForeachRule (level 1)

--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -13,3 +13,4 @@ parameters:
 		reportTooWideBool: true
 		rawMessageInBaseline: true
 		reportNestedTooWideType: false
+		assignToByRefForeachExpr: true
