--- a/conf/config.level1.neon
+++ b/conf/config.level1.neon
@@ -10,3 +10,11 @@ parameters:
 autowiredAttributeServices:
 	# registers rules with #[RegisteredRule] attribute
 	level: 1
+
+conditionalTags:
+	PHPStan\Rules\Variables\AssignToByRefExprFromForeachRule:
+		phpstan.rules.rule: %featureToggles.assignToByRefForeachExpr%
+
+services:
+	-
+		class: PHPStan\Rules\Variables\AssignToByRefExprFromForeachRule
