--- a/conf/parametersSchema.neon
+++ b/conf/parametersSchema.neon
@@ -40,6 +40,7 @@ parametersSchema:
 		reportTooWideBool: bool()
 		rawMessageInBaseline: bool()
 		reportNestedTooWideType: bool()
+		assignToByRefForeachExpr: bool()
 	])
 	fileExtensions: listOf(string())
 	checkAdvancedIsset: bool()
