Validate curl_setopt_array parameter array

--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -14,3 +14,4 @@ parameters:
 		rawMessageInBaseline: true
 		reportNestedTooWideType: false
 		assignToByRefForeachExpr: true
+		curlSetOptArrayTypes: true
