--- a/conf/config.neon
+++ b/conf/config.neon
@@ -38,6 +38,7 @@ parameters:
 		rawMessageInBaseline: false
 		reportNestedTooWideType: false
 		assignToByRefForeachExpr: false
+		curlSetOptArrayTypes: false
 	fileExtensions:
 		- php
 	checkAdvancedIsset: false
