New config parameter `exceptions.check.throwTypeCovariance`

--- a/conf/parametersSchema.neon
+++ b/conf/parametersSchema.neon
@@ -23,7 +23,8 @@ parametersSchema:
 		checkedExceptionClasses: listOf(string()),
 		check: structure([
 			missingCheckedExceptionInThrows: bool(),
-			tooWideThrowType: bool()
+			tooWideThrowType: bool(),
+			throwTypeCovariance: bool()
 		])
 	])
 	featureToggles: structure([
