--- a/conf/config.neon
+++ b/conf/config.neon
@@ -22,6 +22,7 @@ parameters:
 		check:
 			missingCheckedExceptionInThrows: false
 			tooWideThrowType: true
+			throwTypeCovariance: false
 	featureToggles:
 		bleedingEdge: false
 		checkNonStringableDynamicAccess: false
@@ -245,6 +246,8 @@ conditionalTags:
 		phpstan.rules.rule: %exceptions.check.missingCheckedExceptionInThrows%
 	PHPStan\Rules\Properties\UninitializedPropertyRule:
 		phpstan.rules.rule: %checkUninitializedProperties%
+	PHPStan\Rules\Exceptions\MethodThrowTypeCovarianceRule:
+		phpstan.rules.rule: %exceptions.check.throwTypeCovariance%
 
 services:
 	-
@@ -258,6 +261,11 @@ services:
 
 	-
 		class: PHPStan\Rules\Properties\UninitializedPropertyRule
+
+	-
+		class: PHPStan\Rules\Exceptions\MethodThrowTypeCovarianceRule
+		arguments:
+			implicitThrows: %exceptions.implicitThrows%
 
 	# autowired services are now registered with the help of attributes
 	# like #[PHPStan\DependencyInjection\AutowiredService] or #[PHPStan\DependencyInjection\GenerateFactory]
